# ix-schema

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
ix-schema/: Cargo.toml
ix-schema-derive/: Cargo.toml  README.md
ix-schema-derive/src/: lib.rs  model.rs
ix-schema-example/: Cargo.toml
ix-schema-example/src/: main.rs
ix-schema-jsonschema/: Cargo.toml  README.md
ix-schema-jsonschema/src/: lib.rs
ix-schema-postcard/: Cargo.toml  README.md
ix-schema-postcard/src/: lib.rs
ix-schema-serde/: Cargo.toml  README.md
ix-schema-serde/src/: lib.rs
ix-schema-toml/: Cargo.toml  README.md
ix-schema-toml/src/: lib.rs
ix-schema-zerocopy/: Cargo.toml  README.md
ix-schema-zerocopy/src/: lib.rs
ix-schema/src/: lib.rs
ix-schema/tests/: chain.rs  compat.rs  derive.rs  migrate.rs  removal.rs
