[package]
name = "ix-schema-derive"
description = "Derive macro for the ix-schema meta-interface: compile-time semantic manifests and type-safe schema evolution."
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
proc-macro-error2 = "2"
