[package]
name = "ix-schema-example"
description = "End-to-end dogfooding of the ix stack: derive, the serde and zerocopy drivers, and a type-safe migration chain — written as a real consumer would."
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ix-schema = { path = "../ix-schema" }
ix-schema-serde = { path = "../ix-schema-serde" }
ix-schema-zerocopy = { path = "../ix-schema-zerocopy" }
serde = { version = "1", features = ["derive"] }
zerocopy = { version = "0.8", features = ["derive"] }
