[package]
name = "ix-schema-serde"
description = "Serde driver for ix-schema: version-tagged encoding and type-safe migrate-on-decode."
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ix-schema = { path = "../ix-schema", version = "0.2.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
