[package]
name = "ix-schema-toml"
description = "TOML driver for ix-schema: version-tagged encoding and type-safe migrate/upgrade-on-decode over TOML — a third, config-shaped format proving the manifest is format-agnostic."
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ix-schema = { path = "../ix-schema", version = "0.2.0" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
