[package]
name = "ix-schema"
description = "A universal meta-interface for data structures: compile-time semantic manifests bridging memory layout and serialization, with enforced schema evolution."
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ix-schema-derive = { path = "../ix-schema-derive", version = "0.2.0" }
